--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "fastify": "3.14.1",
-    "postgres": "1.0.2"
+    "postgres": "1.0.2",
+    "nodemon": "2.0.7"
   },
   "author": "",
   "license": "ISC"
