--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap"
   },
   "dependencies": {
     "fastify": "3.14.1",
     "postgres": "1.0.2"
+  },
+  "devDependencies": {
+    "tap": "14.11.0"
   },
   "author": "",
   "license": "ISC"
