--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "fastify-cors": "^5.2.0",
     "test": "tap"
   },
   "dependencies": {
